--- a/predict_word.ipynb
+++ b/predict_word.ipynb
@@ -18,7 +18,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "id": "N5b_3FlAkmtL"
    },
@@ -49,7 +49,7 @@
    "metadata": {
     "id": "BVXX0znrqOWi"
    },
-   "execution_count": null,
+   "execution_count": 4,
    "outputs": []
   },
   {
@@ -70,7 +70,7 @@
    "metadata": {
     "id": "GCqb7MW4qZzW"
    },
-   "execution_count": null,
+   "execution_count": 7,
    "outputs": []
   },
   {
@@ -85,9 +85,9 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "gVoetzDyq05L",
-    "outputId": "968179dd-cc48-4960-c4c2-93b3aa8afa8c"
+    "outputId": "fb835bf5-2458-4db2-b92d-144aa7a4222a"
    },
-   "execution_count": null,
+   "execution_count": 9,
    "outputs": [
     {
      "output_type": "stream",
@@ -116,7 +116,7 @@
    "metadata": {
     "id": "bpqErtMrq1O0"
    },
-   "execution_count": null,
+   "execution_count": 10,
    "outputs": []
   },
   {
@@ -149,9 +149,9 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "MGUZ4ti1rC2r",
-    "outputId": "c34e1b28-e78f-4b26-82b7-f465b1cfa138"
+    "outputId": "b18ed176-60fa-47fe-9311-44940f6310be"
    },
-   "execution_count": null,
+   "execution_count": 11,
    "outputs": [
     {
      "output_type": "stream",
@@ -179,9 +179,9 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "eU4PvScyrDM0",
-    "outputId": "2576216d-eaa3-4842-9500-909cedb62083"
+    "outputId": "f1833641-041f-40fa-ac43-f8c757153f9b"
    },
-   "execution_count": null,
+   "execution_count": 12,
    "outputs": [
     {
      "output_type": "stream",
@@ -210,7 +210,7 @@
    "metadata": {
     "id": "jvbhwkQirMuJ"
    },
-   "execution_count": null,
+   "execution_count": 13,
    "outputs": []
   },
   {
@@ -225,18 +225,18 @@
      "height": 232
     },
     "id": "Jrs4lnHGrNr6",
-    "outputId": "e7f6b516-36b0-4c8a-9422-8df248e15ea0"
+    "outputId": "142168d4-dafd-4944-eaa0-528c07078b4c"
    },
-   "execution_count": null,
+   "execution_count": 14,
    "outputs": [
     {
      "output_type": "display_data",
      "data": {
       "text/plain": [
-       "\u001B[1mModel: \"sequential_1\"\u001B[0m\n"
+       "\u001B[1mModel: \"sequential\"\u001B[0m\n"
       ],
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">Model: \"sequential_1\"</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">Model: \"sequential\"</span>\n",
        "</pre>\n"
       ]
      },
@@ -249,22 +249,22 @@
        "┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━┓\n",
        "┃\u001B[1m \u001B[0m\u001B[1mLayer (type)                   \u001B[0m\u001B[1m \u001B[0m┃\u001B[1m \u001B[0m\u001B[1mOutput Shape          \u001B[0m\u001B[1m \u001B[0m┃\u001B[1m \u001B[0m\u001B[1m      Param #\u001B[0m\u001B[1m \u001B[0m┃\n",
        "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━┩\n",
-       "│ embedding_1 (\u001B[38;5;33mEmbedding\u001B[0m)         │ (\u001B[38;5;45mNone\u001B[0m, \u001B[38;5;34m9\u001B[0m, \u001B[38;5;34m100\u001B[0m)         │     \u001B[38;5;34m3,444,900\u001B[0m │\n",
+       "│ embedding (\u001B[38;5;33mEmbedding\u001B[0m)           │ (\u001B[38;5;45mNone\u001B[0m, \u001B[38;5;34m9\u001B[0m, \u001B[38;5;34m100\u001B[0m)         │     \u001B[38;5;34m3,444,900\u001B[0m │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ lstm_1 (\u001B[38;5;33mLSTM\u001B[0m)                   │ (\u001B[38;5;45mNone\u001B[0m, \u001B[38;5;34m128\u001B[0m)            │       \u001B[38;5;34m117,248\u001B[0m │\n",
+       "│ lstm (\u001B[38;5;33mLSTM\u001B[0m)                     │ (\u001B[38;5;45mNone\u001B[0m, \u001B[38;5;34m128\u001B[0m)            │       \u001B[38;5;34m117,248\u001B[0m │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ dense_1 (\u001B[38;5;33mDense\u001B[0m)                 │ (\u001B[38;5;45mNone\u001B[0m, \u001B[38;5;34m34449\u001B[0m)          │     \u001B[38;5;34m4,443,921\u001B[0m │\n",
+       "│ dense (\u001B[38;5;33mDense\u001B[0m)                   │ (\u001B[38;5;45mNone\u001B[0m, \u001B[38;5;34m34449\u001B[0m)          │     \u001B[38;5;34m4,443,921\u001B[0m │\n",
        "└─────────────────────────────────┴────────────────────────┴───────────────┘\n"
       ],
       "text/html": [
        "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━┓\n",
        "┃<span style=\"font-weight: bold\"> Layer (type)                    </span>┃<span style=\"font-weight: bold\"> Output Shape           </span>┃<span style=\"font-weight: bold\">       Param # </span>┃\n",
        "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━┩\n",
-       "│ embedding_1 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Embedding</span>)         │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">9</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">100</span>)         │     <span style=\"color: #00af00; text-decoration-color: #00af00\">3,444,900</span> │\n",
+       "│ embedding (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Embedding</span>)           │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">9</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">100</span>)         │     <span style=\"color: #00af00; text-decoration-color: #00af00\">3,444,900</span> │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ lstm_1 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">LSTM</span>)                   │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">128</span>)            │       <span style=\"color: #00af00; text-decoration-color: #00af00\">117,248</span> │\n",
+       "│ lstm (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">LSTM</span>)                     │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">128</span>)            │       <span style=\"color: #00af00; text-decoration-color: #00af00\">117,248</span> │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ dense_1 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                 │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">34449</span>)          │     <span style=\"color: #00af00; text-decoration-color: #00af00\">4,443,921</span> │\n",
+       "│ dense (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                   │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">34449</span>)          │     <span style=\"color: #00af00; text-decoration-color: #00af00\">4,443,921</span> │\n",
        "└─────────────────────────────────┴────────────────────────┴───────────────┘\n",
        "</pre>\n"
       ]
@@ -315,7 +315,6 @@
   {
    "cell_type": "code",
    "source": [
-    "\n",
     "from keras.callbacks import EarlyStopping\n",
     "\n",
     "early_stopping = EarlyStopping(monitor='val_loss', patience=5, restore_best_weights=True)\n",
@@ -329,41 +328,41 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "uWOE3IbWrPlz",
-    "outputId": "c941eab4-41b5-4e35-eeaf-3838a1b81372"
+    "outputId": "b58b781e-c5a5-4771-ae84-32a912d32756"
    },
-   "execution_count": null,
+   "execution_count": 15,
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
       "Epoch 1/30\n",
-      "\u001B[1m8835/8835\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m140s\u001B[0m 16ms/step - accuracy: 0.0352 - loss: 7.7404 - val_accuracy: 0.0984 - val_loss: 6.6480\n",
+      "\u001B[1m8835/8835\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m137s\u001B[0m 15ms/step - accuracy: 0.0356 - loss: 7.7438 - val_accuracy: 0.0979 - val_loss: 6.6545\n",
       "Epoch 2/30\n",
-      "\u001B[1m8835/8835\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m141s\u001B[0m 16ms/step - accuracy: 0.1072 - loss: 6.2628 - val_accuracy: 0.1124 - val_loss: 6.4494\n",
+      "\u001B[1m8835/8835\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m143s\u001B[0m 16ms/step - accuracy: 0.1063 - loss: 6.2725 - val_accuracy: 0.1123 - val_loss: 6.4513\n",
       "Epoch 3/30\n",
-      "\u001B[1m8835/8835\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m135s\u001B[0m 15ms/step - accuracy: 0.1297 - loss: 5.8155 - val_accuracy: 0.1193 - val_loss: 6.4199\n",
+      "\u001B[1m8835/8835\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m136s\u001B[0m 15ms/step - accuracy: 0.1295 - loss: 5.8205 - val_accuracy: 0.1179 - val_loss: 6.4345\n",
       "Epoch 4/30\n",
-      "\u001B[1m8835/8835\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m135s\u001B[0m 15ms/step - accuracy: 0.1461 - loss: 5.5226 - val_accuracy: 0.1188 - val_loss: 6.4583\n",
+      "\u001B[1m8835/8835\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m142s\u001B[0m 15ms/step - accuracy: 0.1454 - loss: 5.5269 - val_accuracy: 0.1199 - val_loss: 6.4693\n",
       "Epoch 5/30\n",
-      "\u001B[1m8835/8835\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m142s\u001B[0m 15ms/step - accuracy: 0.1597 - loss: 5.3075 - val_accuracy: 0.1182 - val_loss: 6.5254\n",
+      "\u001B[1m8835/8835\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m142s\u001B[0m 15ms/step - accuracy: 0.1595 - loss: 5.3081 - val_accuracy: 0.1192 - val_loss: 6.5309\n",
       "Epoch 6/30\n",
-      "\u001B[1m8835/8835\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m142s\u001B[0m 15ms/step - accuracy: 0.1739 - loss: 5.1275 - val_accuracy: 0.1182 - val_loss: 6.5984\n",
+      "\u001B[1m8835/8835\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m142s\u001B[0m 15ms/step - accuracy: 0.1732 - loss: 5.1314 - val_accuracy: 0.1196 - val_loss: 6.6042\n",
       "Epoch 7/30\n",
-      "\u001B[1m8835/8835\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m138s\u001B[0m 16ms/step - accuracy: 0.1863 - loss: 4.9845 - val_accuracy: 0.1163 - val_loss: 6.6737\n",
+      "\u001B[1m8835/8835\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m136s\u001B[0m 15ms/step - accuracy: 0.1863 - loss: 4.9847 - val_accuracy: 0.1179 - val_loss: 6.6867\n",
       "Epoch 8/30\n",
-      "\u001B[1m8835/8835\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m142s\u001B[0m 16ms/step - accuracy: 0.1991 - loss: 4.8582 - val_accuracy: 0.1150 - val_loss: 6.7515\n"
+      "\u001B[1m8835/8835\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m143s\u001B[0m 16ms/step - accuracy: 0.1988 - loss: 4.8636 - val_accuracy: 0.1167 - val_loss: 6.7636\n"
      ]
     },
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<keras.src.callbacks.history.History at 0x7c7f401d93d0>"
+       "<keras.src.callbacks.history.History at 0x7a0635758050>"
       ]
      },
      "metadata": {},
-     "execution_count": 32
+     "execution_count": 15
     }
    ]
   },
@@ -377,9 +376,8 @@
     "        token_list = tokenizer.texts_to_sequences([cleaned_seed])[0]\n",
     "\n",
     "        if not token_list:\n",
-    "            print(\"لم يتم العثور على كلمات صالحة في النص المدخل .\")\n",
+    "            print(\"No valid words found in the input text\")\n",
     "            return generated_text\n",
-    "\n",
     "\n",
     "        padded_token_list = pad_sequences([token_list], maxlen=max_sequence_len - 1, padding='pre')\n",
     "        predicted_probs = model.predict(padded_token_list, verbose=0)[0]\n",
@@ -394,51 +392,52 @@
     "        if predicted_word:\n",
     "            generated_text += \" \" + predicted_word\n",
     "        else:\n",
-    "            print(\"لم يتم العثور على كلمة متوقعة.\")\n",
+    "            print(\"No predicted word found\")\n",
     "            break\n",
     "\n",
     "    return generated_text\n",
     "\n",
     "\n",
-    "\n",
+    "#Examples:\n",
     "seed_1 = \"police investigate\"\n",
     "predicted_1 = predict_next_words(model_next_word, tokenizer, max_sequence_length, seed_1, num_words_to_predict=3)\n",
-    "print(f\"النص الأصلي: '{seed_1}' -> التوقع: '{predicted_1}'\")\n",
+    "print(f\"Original: '{seed_1}' -> Prediction: '{predicted_1}'\")\n",
     "\n",
     "seed_2 = \"government announce\"\n",
     "predicted_2 = predict_next_words(model_next_word, tokenizer, max_sequence_length, seed_2, num_words_to_predict=2)\n",
-    "print(f\"النص الأصلي: '{seed_2}' -> التوقع: '{predicted_2}'\")\n",
+    "print(f\"Original: '{seed_2}' -> Prediction: '{predicted_2}'\")\n",
     "\n",
     "seed_3 = \"australia\"\n",
     "predicted_3 = predict_next_words(model_next_word, tokenizer, max_sequence_length, seed_3, num_words_to_predict=5)\n",
-    "print(f\"النص الأصلي: '{seed_3}' -> التوقع: '{predicted_3}'\")\n",
+    "print(f\"Original: '{seed_3}' -> Prediction: '{predicted_3}'\")\n",
     "\n",
     "seed_4 = \"global warming\"\n",
     "predicted_4 = predict_next_words(model_next_word, tokenizer, max_sequence_length, seed_4, num_words_to_predict=4)\n",
-    "print(f\"النص الأصلي: '{seed_4}' -> التوقع: '{predicted_4}'\")\n",
+    "print(f\"Original: '{seed_4}' -> Prediction: '{predicted_4}'\")\n",
     "\n",
     "seed_5 = \"egypt\"\n",
     "predicted_5 = predict_next_words(model_next_word, tokenizer, max_sequence_length, seed_5, num_words_to_predict=3)\n",
-    "print(f\"النص الأصلي: '{seed_5}' -> التوقع: '{predicted_5}'\")"
+    "print(f\"Original: '{seed_5}' -> Prediction: '{predicted_5}'\")\n",
+    "\n"
    ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
     "id": "BSHdoVMerfgx",
-    "outputId": "d25866e6-376d-4dfa-9fca-2300d27b0ed6"
+    "outputId": "c28dd4e2-91a7-4ee5-db25-ab0d705aa2d9"
    },
-   "execution_count": null,
+   "execution_count": 16,
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "النص الأصلي: 'police investigate' -> التوقع: 'police investigate fatal car crash'\n",
-      "النص الأصلي: 'government announce' -> التوقع: 'government announce new law'\n",
-      "النص الأصلي: 'australia' -> التوقع: 'australia take lead world cup final'\n",
-      "النص الأصلي: 'global warming' -> التوقع: 'global warming may help ease water'\n",
-      "النص الأصلي: 'egypt' -> التوقع: 'egypt train crash kill'\n"
+      "Original: 'police investigate' -> Prediction: 'police investigate fatal car crash'\n",
+      "Original: 'government announce' -> Prediction: 'government announce new road'\n",
+      "Original: 'australia' -> Prediction: 'australia set pace world cup final'\n",
+      "Original: 'global warming' -> Prediction: 'global warming may help prevent alzheimers'\n",
+      "Original: 'egypt' -> Prediction: 'egypt bus crash kill'\n"
      ]
     }
    ]
